# fs2gdl90

./: CMakeLists.txt  README.md  build_linux.sh  build_mac.sh  build_win.bat
.github/workflows/: build.yml  coverage.yml
docs/: GDL 90_Extended_Specification.md  GDL90_Public_ICD_RevA.md
include/fs2gdl90/: foreflight_protocol.h  msfs_support.h  protocol_utils.h  settings.h  settings_ui.h  simple_json.h
scripts/: coverage.sh
src/core/: encoder_support.h  foreflight_encoder.cpp  foreflight_protocol.cpp  gdl90_encoder.cpp  protocol_utils.cpp  settings.cpp  settings_ui.cpp  simple_json.cpp  udp_broadcaster.cpp  udp_receiver.cpp
src/msfs/: app.cpp  support.cpp
src/xplane/: plugin.cpp
tests/: frame_test_utils.h  test_foreflight_encoder.cpp  test_foreflight_protocol.cpp  test_gdl90_encoder.cpp  test_msfs_support.cpp  test_protocol_utils.cpp  test_settings.cpp  test_settings_ui.cpp  test_simple_json.cpp  test_udp_broadcaster.cpp
